CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

ADD_EXECUTABLE(movies
    src/main.cpp
    src/movies.cpp
)

SET(CURL_LIBRARY "-lcurl")
FIND_PACKAGE(CURL REQUIRED)
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(movies ${CURL_LIBRARIES})

FIND_PACKAGE(jsoncpp REQUIRED)
GET_TARGET_PROPERTY(jsoncpp_LIBRARIES jsoncpp_lib INTERFACE_INCLUDE_DIRECTORIES)
INCLUDE_DIRECTORIES(${jsoncpp_LIBRARIES})
TARGET_LINK_LIBRARIES(movies jsoncpp)
